syntax="proto3";
package com.ydqp.common.receiveProtoMsg;
option java_outer_classname = "lobby";
message PlayerLogin {  
 string playerName=1;
 string passWord=2;
}
message PlayerLogout {  
 string playerName=1;
}
message LoginSuccess {  
// 房间id
 int32 roomId=1;
// 用户的zj
 double playerZJPoint=2;
// 用户的手机号
 string playerName=3;
// 用户的昵称
 string playerNickName=4;
// 用户的头像地址
 string playerUrl=5;
// 用户id
 int64 playerId=6;
 string openGames=7;
 //是否虚拟号
 int32 isVir=8;
}

message LobbyError {
	int32 errorCode=1;
	string errorMsg=2;
}

message LobbyKickPlayer {
	int64 playerId=1;
}

message CoinPointSuccess {
    int64 playerId = 1;     //玩家ID
    double coinPoint = 2;   //coin
}

message Refresh {
    int32 type=1;   //0:筹码;1:金币
}

message GetGameVersion{
    int64 playerId=1;
}

message SGameVersion {
    string apkVersion=1;
    string jsVersion=2;
    bool isMandatoryApk=3;
    string apkUrl=4;
}

message HeadUrl {
    int64 playerId = 1;
    string headUrl = 2;
}

message HeadUrlSuccess {
    bool success = 1;
    string message = 2;
    int64 playerId = 3;
    string headUrl = 4;
}


message MobileRegister {
    string mobile = 1;
    string password = 2;
    string repeatPassword = 3;
    string verificationCode = 4;
    string referralCode = 5;
    int32 appId = 6;
}

message MobileRegisterSuc {
    bool success = 1;
    string message = 2;
    string playerName = 3;
    string password = 4;
}

message SmsSend {
    string mobile = 1;
    int32 areaCode = 2;
}

message SmsSendSuc {
    int32 sendTime = 1;
    string message = 2;
}

message PlayerResetPassword {
  string mobile=1;
  string password=2;
  string repeatPassword=3;
  string verificationCode=4;
}

message PlayerResetPasswordSuc {
  bool success=1;
  string message=2;
  string playerName=3;
  string password=4;
}
//推广
message ParityOrder {
  int64 playerId = 1;
}
message ParityOrderDetail {
  int64 playerId = 1;
}
message ParityOrderLv {
  int64 playerId = 1;
  // lv1: 1; lv2: 2
  int32 lv = 2;
  int32 page = 3;
  int32 size = 4;
}
message ParityReceive {
  int64 playerId = 1;
  int32 taskId = 2;
}
message ParityRecommendTask {
  int64 playerId = 1;
}
message ParityOrderDetailInfo {
  int64 playerId = 1;
  string nickname = 2;
  double contribute = 3;
  int32 date = 4;
  double rechargeAmount = 5;
  double withdrawAmount = 6;
  int32 recommendNumber = 7;
}
message ParityOrderDetailSuc {
  repeated ParityOrderDetailInfo parityOrderDetailInfos = 1;
  int64 playerId = 2;
}
message ParityOrderLvSuc {
  repeated ParityOrderDetailInfo infos = 1;
  int64 playerId = 2;
  int32 total = 3;
  double bonus = 4;
}
message ParityOrderSuc {
  int64 playerId = 1;
  double playerZJ = 2;
  // 有效用户数
  int32 effectiveNum = 3;
  // LV1有效用户数
  int32 effectiveNumLv1 = 4;
  // LV1获得的金币
  double bonusLv1 = 5;
  // LV2有效用户数
  int32 effectiveNumLv2 = 6;
  // LV2获得的金币
  double bonusLv2 = 7;
  // 推广码
  string referralCode = 8;
  // 推广链接
  string referralLink = 9;
}
message TaskConfigData {
  int32 id = 1;
  string name = 2;
  int32 type = 3;
  int32 reward = 4;
  int32 target = 5;
  int32 enabled = 6;
}
message ParityRecommendTaskSuc {
  int32 effectiveNum = 1;
  repeated TaskConfigData taskConfigDataList = 2;
  // 已领取奖励的任务ID
  string rewardTaskIds = 3;
}
message ParityReceiveSuc {
  bool success = 1;
  string message = 2;
  double amount = 3;
}
//提取返利
message ParityBonusAmountDraw {
  int64 playerId = 1;
  double bonusAmount = 2;
}
message ParityBonusAmountDrawSuc {
  bool success = 1;
  string message = 2;
}
message ParityCollectBonus {
  int64 playerId = 1;
}
message ParityCollectBonusSuc {
  double totalBonus = 1;
  repeated PlayerBonusDrawData bonusDrawList = 2;
}
message PlayerBonusDrawData {
  int32 id = 1;
  int64 playerId = 2;
  string orderId = 3;
  double amount = 4;
  int32 status = 5;
  int32 createTime = 6;
}

message GetAnnouncement {
  int64 playerId = 1;
}

message SAnnouncement {
  string announcement = 1;
}

message CheckEnterRoom {
  int32 roomId = 1;
}

message CheckEnterRoomSuc {
  int32 code = 1;
}

message GetServiceConfig {
  int64 playerId = 1;
}

message SServiceConfig {
  string telegram = 1;
  string whatsapp = 2;
}